# ECS50

./: README.md
1.1 Change of Base/: CMakeLists.txt  changeOfBase.cpp
1.2 New Alphabet/: newAlphabet.cpp
1.3 Scientific Floating/: scientificFloating.cpp
1.4 TriMatMult/: triMatMult.cpp
2.2 Div/: div.c
2.3 Div Assembly/: Makefile  divass.s
2.4 Edit Dist/: editDist.c
3.1 Combs/: matmult.s
3.2 Mat Mult/: CMakeLists.txt  knapsack.s
3.3 Knapsack/: combs.h
4.1 Floating Point Addition/: MyFloat.cpp  tian.cpp
