cmake_minimum_required(VERSION 3.15)
project(Starter)

set(CMAKE_CXX_STANDARD 14)

add_executable(Starter
        Tests/0-test.txt
        Tests/1-test.txt
        Tests/2-test.txt
        Tests/3-test.txt
        Tests/4-test.txt
        Tests/5-test.txt
        Tests/6-test.txt
        Tests/7-test.txt
        Tests/8-test.txt
        Tests/9-test.txt
        knapsack.c)
